# Dawn

./: .gitignore  LICENSE  README.md  meson.build  meson_options.txt  todo.txt
src/: basic.h  icon.res  image.cpp  image.h  lib.cpp  main.cpp  material.cpp  material.h  math.cpp  math.h  math_simd.h  object.cpp  object.h  render.cpp  render.h  scene.cpp  scene.h  stb.cpp  texture.cpp  texture.h  thread_pool.cpp  thread_pool.h  vec.h
src/lib/: lib.cpp  math.h  thread_pool.h  vec.h
